RESOLVED FIXED314848
[JSC][Temporal] Fix fractionToDouble for large denominators and consolidate ZonedDateTime diff
https://bugs.webkit.org/show_bug.cgi?id=314848
Summary [JSC][Temporal] Fix fractionToDouble for large denominators and consolidate Z...
Yijia Huang
Reported 2026-05-14 14:02:45 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2026-05-14 14:02:51 PDT
Yijia Huang
Comment 2 2026-05-14 14:17:13 PDT
EWS
Comment 3 2026-05-14 16:13:06 PDT
Committed 313276@main (7f9fbe74e492): <https://commits.webkit.org/313276@main> Reviewed commits have been landed. Closing PR #64954 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.